Replace bintray to jitpack

--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,18 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
-        classpath 'com.novoda:bintray-release:0.3.4'
+        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
 }
 
 allprojects {
+
+    version = 'r1.5.5'
+    group = 'com.github.ogaclejapan.exoplayer-amazon-port'
+
     repositories {
         mavenCentral()
     }
 }
+
